static/css/style.css
* {
  margin: 0;
}

body {
  min-height: 100vh;
  padding-bottom: 7rem;
}

.container {
  margin-top: 2rem;
  margin-bottom: 2rem;
}

#mainNav {
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
  z-index: 3;
}

#mainNav,
.footer {
  background-color: #477D55;
  color: #FEFDFB;
  margin: 0;
}

#mainNav .container-fluid ul {
  align-items: center;
  justify-content: space-around;
  width: 100%;
}

#mainNav .container-fluid .navbar-nav .nav-item .nav-link {
  width: 100%;
  height: 100%;
  text-align: center;
  box-sizing: border-box;
  margin: 0;
  font-family: "Raleway", sans-serif;
  font-weight: normal;
  border: 5px solid #477D55;
  color: #FEFDFB
}

.navbar-nav .dropdown-menu {
  background-color: #477D55;
  border: 0;
  width: 100%;
  text-align: center;
}

.dropdown-item {
  color: #FEFDFB;
}

img {
  width: 100%;
  height: auto;
  border-radius: 2em;
  margin: 2em auto;
}

img.product-item-img {
  margin: 0;
}

.navbar-brand img {
  width: 50vw;
  height: auto;
  border-radius: 0;
  margin: 0;
}

.site-heading,
.page-title {
  background-color: #28282870;
  backdrop-filter: blur(1.3px);
}

.site-heading .site-heading-upper {
  color: #5E8C6A;
}

.site-heading .site-heading-lower {
  color: #B43858;
}

.section-heading .section-heading-upper {
  color: #477D55;
}

.section-heading .section-heading-lower {
  font-size: 2rem;
  color: #B43858;
}

body {
  background-position: right;
}

a {
  color: #5E8C6A;
  text-decoration: none;
  background-color: transparent;
}

a:hover {
  color: #477D55;
  text-decoration: none;
}

.btn-success,
a.btn-success {
  background-color: #477D55;
}

.btn-success:hover,
a.btn-success:hover {
  background-color: #5E8C6A;
}

.btn-danger,
a.btn-danger {
  background-color: #B43858;
}

.btn-danger:hover
a.btn-danger:hover {
  background-color: #9c193f;
}

.btn-info,
a.btn-info {
  background-color: #FEFDFB;
  color: #477D55;
  border: 1px solid #477D55;
}

btn-info:hover,
a.btn-info:hover {
  color: #FEFDFB;
  background-color: #B43858;
}

.cta {
  background-color: #B4385895;
}

.cta-inner {
  border: .25rem double #B4385895;
}

.card.team-member {
  text-align: center;
}

.team-member img {
  width: 50%;
  margin-left: auto;
  border-radius: 50%;
}

.service-image,
.card img {
  width: 80%;
  height: auto;
  margin: 20px auto;
  border-radius: 5px;
}

.card {
  height: 100%;
}

.site-heading {
  padding-top: 5rem;
  padding-bottom: 5rem;
  margin: 0;
}

.section-heading .section-heading-upper.small-heading {
  font-size: 1.3rem;
}

.btn-fluid {
  width: 100%;
}

form table input {
  width: 100%;
}

span.helptext {
  font-size: x-small;
}

.btn-lg, .btn-xl {
  font-size: 1.2rem
}

footer.footer {
  width: 100%;
  position: fixed;
  bottom: 0%;
  z-index: 3;
}


/* Christmas Countdown styles
adapted from inline styles in 
https://www.days-until-christmas.co.uk/webcounts/xcd3248.js) */
div#xcd3248 {
  width: 180px;
  height: 130px;
  overflow: hidden;
  font-family: Verdana, Arial;
  cursor: pointer;
  background: url(https://www.days-until-christmas.co.uk/webcounts/imgs/xcd1.jpg);
  text-align: center;
  line-height: normal;
  position: relative;
}
div#xcd3248 div {
  font-weight: bold;
  color: #B43858;
  position: absolute;
  left: 0;
  width: 100%;
}
div#xcd3248 a {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  color: transparent;
}
/* End of Christmas Countdown styles */

@media screen and (min-width: 481px) {
  .section-heading .section-heading-lower {
    font-size: 2.5rem;
  }
}

@media screen and (min-width: 769px) {
  #mainNav .container-fluid .navbar-nav .nav-item .nav-link {
    font-size: 2em;
  }

  .page-title .section-heading .section-heading-lower {
    font-size: 4rem;
  }

  .page-title .section-heading .section-heading-upper {
    font-size: 2rem;
  }

  .section-heading .section-heading-lower {
    font-size: 3rem;
  }

  .section-heading .section-heading-upper {
    font-size: 1.5rem;
  }
}


@media (min-width: 992px) {
  .nav-item {
    width: 16.6%;
  }

  #mainNav .container-fluid .navbar-nav .nav-item .nav-link:hover {
    background-color: #5E8C6A;
    border-radius: 0.25rem;
  }

  .product-item-title div {
    width: 60%;
  }

  .product-item .product-item-img {
    position: relative;
    z-index: 0;
    max-width: 40%;
  }

  .about-heading .about-heading-content {
    margin-top: -20rem;
    position: relative;
    z-index: 1;
  }

  .staff-image,
  .service-detail-image {
    width: 35%;
    height: auto;
  }
}

footer .col-lg-9 a {
  color: #FEFDFB;
}

footer .col-lg-9 a:hover {
  color: #000000;
  font-weight: bold;
}

@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

